# HERA

./: .gitattributes  .gitignore  README.md  hera-claude-stdio.ps1  pyproject.toml
docs/: ARCHITECTURE.md  CLAUDE_MODELING_GUIDE.md  CONTRACT.md  TOOLING_POLICY.md
src/hera_mcp/: __init__.py  __main__.py
src/hera_mcp/blender_bridge/: __init__.py  mcp_protocol.py  mcp_stdio.py  scene_state.py
src/hera_mcp/core/: coerce.py  envelope.py  queue.py  safe_exec.py
src/hera_mcp/core/actions/: __init__.py  base.py  models.py  registry.py  runner.py
src/hera_mcp/server/: core.py  socket_server.py  stdio.py
src/hera_mcp/tools/: __init__.py  blender_client.py  blender_ui_impl.py
src/hera_mcp/tools/core/: __init__.py  health.py  ops.py
src/hera_mcp/tools/scene/: __init__.py  create_object.py  (+3 more)
tests/: test_blender_batch.py  test_blender_modeling.py  test_blender_roundtrip.py  test_core_proxy_selection.py  test_docs_modeling_guide.py  test_stdio_protocol.py  test_stdio_roundtrip.py  test_stdio_smoke.py  test_tool_schemas.py
tests/headless/: test_mvp.py
tools/: blender_ui_socket_bridge.py  blender_worker.py  claude_launch_probe.ps1  dev.ps1  hera-mcp-direct.bat  hera-stdio-simple.bat  hera-stdio-wrapper.bat  hera-stdio.ps1  hera-ws-proxy.ps1  install_claude_desktop_mcp.ps1  launch_blender_ui.ps1  mcp_smoke_test.py  mcp_smoke_test_claude.py  mcp_smoke_test_stdio.py  mcp_ws_stdio_server.js  run_stdio_blender.py  run_worker.ps1  smoke_ws_proxy.ps1  start-worker.bat  stdio_filter.py  stdio_proxy.py  ui_bridge.py  ws_stdio_proxy.py
tools/examples/: modeling_batch_demo.py
