[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hera-mcp"
version = "0.0.1"
description = "HERA MCP - clean slate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
hera-mcp-stdio = "hera_mcp.server.stdio:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
